2017-07-24  Julien Bect  <julien.bect@centralesupelec.fr>

	Keep a copy of the original "direct" implementation of LOO-CV.

	* core/@stk_model_gpposterior/stk_predict_leaveoneout_direct.m:
	Internal function, which is simply a copy of our original,
	"direct" implementation of LOO-CV.  Can be used to check
	correctness of virtual LOO formulas, and for benchmarking.
	* admin/octpkg/INDEX: Hide internal function from the index.

2017-07-23  Remi Stroh  <remi.stroh@lne.fr>

	stk_predict_leaveoneout.m: Use virtual Leave-One-Out formula (ticket #35)

	* core\@stk_model_gpposterior\stk_predict_leaveoneout.m: Replace
	the naive expression of the cross-validation, by the virtual
	leave-one-out formula.
	* core\stk_predict_leaveoneout.m: Add a test to check virtual
	LOO formula.

2017-07-12  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_benchmark_predict.m: New function to benchmark stk_predict

	* misc/benchmarks/stk_benchmark_predict.m: New function to
	benchmark stk_predict.

	stk_benchmark_.m: New function to help benchmark computation times

	* misc/benchmarks/stk_benchmark_.m: New function to help benchmark
	computation times.

2017-07-10  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_example_misc04.m: Work-around for Octave bug #49267.

	* examples/03_miscellaneous/stk_example_misc04.m: Work-around for
	Octave bug #49267.

	New octpkg patch to comment out unit tests in private functions

	* admin/octpkg/patches/comment-out-unit-tests-in-private-functions.patch:
	New octpkg patch to comment out unit tests in private functions.
	* admin/octpkg/patches/series: Add new test to the series.

2017-07-09  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_predict_leaveoneout.m: Update help text

	* core/stk_predict_leaveoneout.m: Update help text.

	Set release date based on hg date in the build process

	* Makefile: Pass hg date to build_* functions.
	* admin/build_tools/build_allpurpose.m: Use hg date.
	* admin/build_tools/build_octpkg.m: Use hg date.